[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/Heart/Main.gd" type="Script" id=1]
[ext_resource path="res://assets/CorazonVacio.png" type="Texture" id=2]
[ext_resource path="res://scenes/Heart/Piece.gd" type="Script" id=3]
[ext_resource path="res://assets/CorazonParte1.png" type="Texture" id=4]
[ext_resource path="res://assets/CorazonParte2.png" type="Texture" id=5]
[ext_resource path="res://assets/CorazonParte3.png" type="Texture" id=6]
[ext_resource path="res://assets/CorazonParte4.png" type="Texture" id=7]

[node name="Root" type="Node2D"]
script = ExtResource( 1 )

[node name="Heart" type="Sprite" parent="."]
position = Vector2( 490.92, 294.552 )
texture = ExtResource( 2 )

[node name="Piece1" type="Area2D" parent="."]
editor/display_folded = true
position = Vector2( 243.599, 172.959 )
rotation = 1.9635
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Piece1"]
position = Vector2( -46.5376, 52.0777 )
texture = ExtResource( 4 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Piece1"]
polygon = PoolVector2Array( -54.8478, -19.9446, -26.0388, -47.6456, 31.5791, -47.6456, 59.28, -19.9446, 60.388, 34.3492, 16.0666, 37.6733, -24.9308, 36.5652, -55.9559, 7.75629 )

[node name="Piece2" type="Area2D" parent="."]
editor/display_folded = true
position = Vector2( 288.651, 411.046 )
rotation = 3.53429
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Piece2"]
position = Vector2( 50.9696, 45.4295 )
texture = ExtResource( 5 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Piece2"]
polygon = PoolVector2Array( -59.28, 44.3215, -59.28, -25.4848, -27.1469, -53.1858, 23.8228, -54.2938, 42.6595, -39.8893, 71.4684, 15.5125, 71.4684, 31.0251, 58.172, 46.5376, 28.255, 46.5376, 10.5264, 28.809, -12.7424, 46.5376 )

[node name="Piece3" type="Area2D" parent="."]
editor/display_folded = true
position = Vector2( 679.573, 168.258 )
rotation = 3.14159
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Piece3"]
position = Vector2( 26.5928, -28.809 )
texture = ExtResource( 6 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Piece3"]
position = Vector2( -24.3768, -75.3465 )
polygon = PoolVector2Array( 12.7424, 13.2965, 45.9836, 49.8617, 45.9836, 60.9421, 38.2273, 65.3742, 58.172, 74.2385, 69.2523, 86.4269, 72.5764, 127.424, 51.5237, 146.261, -45.9836, 53.1858 )

[node name="Piece4" type="Area2D" parent="."]
editor/display_folded = true
position = Vector2( 718.916, 470.237 )
rotation = 1.1781
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Piece4"]
position = Vector2( -35.4572, -14.4045 )
texture = ExtResource( 7 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Piece4"]
position = Vector2( -62.0501, 14.4045 )
polygon = PoolVector2Array( 53.7398, 43.2135, 139.059, -28.8089, 136.843, -46.5375, 93.6292, -50.9697, 91.413, -63.1581, 73.6844, -60.942, 70.3604, -47.6456, 31.579, -45.4295, 2.77008, -7.75623 )
[connection signal="input_event" from="Piece1" to="Piece1" method="_on_Piece_input_event"]
[connection signal="input_event" from="Piece2" to="Piece2" method="_on_Piece_input_event"]
[connection signal="input_event" from="Piece3" to="Piece3" method="_on_Piece_input_event"]
[connection signal="input_event" from="Piece4" to="Piece4" method="_on_Piece_input_event"]
